2004-11-16  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpfgbgeditor.c: get rid of the
	gimp_fg_bg_editor_context_changed() callback and
	g_signal_connect_swapped() gtk_widget_queue_draw() directly.

2004-11-16  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpchanneltreeview.c: implement
	GimpDockedInterface::set_context() and set the context of the
	embedded GimpComponentEditor. Fixes NULL-context crashes in
	action callbacks when invoked from the component editor.
	Spotted by Jimmac.

	Unrelated:

	* app/widgets/gimpitemtreeview.c: get rid of the
	gimp_item_tree_view_context_changed() callback and
	g_signal_connect_swapped() gimp_item_tree_view_set_image()
	directly.

2004-11-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/jigsaw.c: added missing braces around initializer.

2004-11-16  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/drawable_transform.pdb: renamed the new
	drawable_foo_defaults() functions to drawable_foo_default() to be
	consistent with paintbrush_default() and friends.

	* tools/pdbgen/pdb/transform_tools.pdb
	* libgimp/gimp.def: changed accordingly.

	* app/pdb/drawable_transform_cmds.c
	* app/pdb/transform_tools_cmds.c
	* libgimp/gimpdrawabletransform_pdb.[ch]
	* libgimp/gimptransformtools_pdb.c: regenerated.

	* plug-ins/script-fu/scripts/coolmetal-logo.scm
	* plug-ins/script-fu/scripts/image-structure.scm
	* plug-ins/script-fu/scripts/text-circle.scm: follow the API change.

2004-11-16  Sven Neumann  <sven@gimp.org>

	* app/config/gimpbaseconfig.c: increased default tile-cache-size
	to 128MB.

	* app/config/gimpcoreconfig.c: increased default undo size to 16MB.

2004-11-16  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/image.pdb
	* tools/pdbgen/pdb/selection.pdb: entirely removed the deprecated
	functions "selection_clear", "image_set_cmap" and "image_get_cmap".

	* app/pdb/procedural_db.c: and added them to the compat hash table
	because they have undeprecated replacements with identical
	signature.
